# nlp-esg-local-env

./: README.md  pyproject.toml  workspace.yaml
docs/: problem_statement.md
pipelines/: bronze_ingest.py  download_csr_from_ir.py  edgar_pipeline.py  ocr_csr.py  ocr_csr_per_page.py  parse_csr.py
resources/: esg_lexicon.yaml
scripts/: ocr_csr_standalone.py  show_parse_results.py
tests/: conftest.py  test_bronze_ingest.py  test_lexicon.py  test_load_lexicon_op.py  test_ocr.py  test_parse_csr.py
